teamplate 2 fix. Template 3 visibility fix.

--- a/src/components/AlbumTemplates/Template2.module.css
+++ b/src/components/AlbumTemplates/Template2.module.css
@@ -73,13 +73,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 2%;
-    left: 2%;
-    background-image: url("/assets/img/album/individual-sticker-frame.png");
-    background-size: 100% 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    /* background-color: yellowgreen; */
+    position: relative;
 }
 
 .shiny-sticker {
@@ -139,7 +133,7 @@
     position: relative;
 }
 
-.individual-sticker{
+.individual-sticker {
     width: 100%;
     height: 100%;
     position: relative;
@@ -152,24 +146,6 @@
     background-repeat: no-repeat;
 }
 
-/* Unify the placeholder image styles */
-.drop-zone .placeholder-image,
-.drop-zone .placeholder-image-individual {
-    width: 90%;
-    height: 90%;
-    object-fit: contain;
-    filter: brightness(100) grayscale(1) contrast(10);
-    pointer-events: none;
-}
-
-.individual-sticker-1 .sticker-image,
-.individual-sticker-2 .sticker-image {
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    object-fit: contain;
-}
-
 /* DROP ZONES */
 .scene-1-container,
 .scene-2-container {
@@ -177,13 +153,6 @@
 }
 
 .drop-zone-shiny {
-    position: relative;
-    width: 23%;
-    height: auto;
-}
-
-.individual-sticker-1-container .drop-zone-1,
-.individual-sticker-2-container .drop-zone-1 {
     position: relative;
     width: 100%;
     height: 100%;
@@ -218,7 +187,7 @@
 }
 
 .drop-zone .placeholder-image-individual {
-    height: 70%;
+    height: 100%;
     width: 70%;
     object-fit: contain;
     filter: brightness(100) grayscale(1) contrast(10);
@@ -226,13 +195,27 @@
 }
 
 .drop-zone .sticker-image {
-    position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     pointer-events: none;
     z-index: 2;
 }
+
+.individual-sticker img.sticker-image {
+    position: absolute;
+    width: 70%;
+}
+
+/* Individual stickers drop zones */
+.individual-stickers-container .drop-zone-1,
+.individual-stickers-container .drop-zone-2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 /* Scene 1 drop zones */
 .scene-1-container .drop-zone-1 {
@@ -240,6 +223,7 @@
     left: 10%;
     width: 13%;
     height: auto;
+    z-index: 2;
     /* background-color: red; */
 }
 
@@ -248,6 +232,7 @@
     left: 22%;
     width: 33%;
     height: auto;
+    z-index: 2;
     /* background-color: violet; */
 }
 
@@ -256,6 +241,7 @@
     right: 35%;
     width: 16%;
     height: auto;
+    z-index: 2;
     /* background-color: green; */
 }
 
@@ -265,6 +251,7 @@
     left: 10%;
     width: 15%;
     height: auto;
+    z-index: 2;
     /* background-color: orange; */
 }
 
@@ -273,6 +260,7 @@
     left: 30%;
     width: 35%;
     height: auto;
+    z-index: 2;
     /* background-color: violet; */
 }
 
@@ -281,12 +269,6 @@
     right: 10%;
     width: 20%;
     height: auto;
+    z-index: 2;
     /* background-color: red; */
-}
-
-.sticker-image {
-    width: 90%;
-    height: 90%;
-    object-fit: contain;
-    pointer-events: none;
 }
